Add data deletion policy section for Apple review

--- a/privacy.html
+++ b/privacy.html
@@ -189,7 +189,11 @@
             <h2>7. プライバシーポリシーの変更</h2>
             <p>当アプリは、必要に応じて本プライバシーポリシーを変更することがあります。重要な変更がある場合は、アプリ内でお知らせいたします。</p>
 
-            <h2>8. お問い合わせ</h2>
+            <h2>8. データの削除について</h2>
+            <p>ユーザーはアプリ内の設定画面、または下記のお問い合わせフォームより、アカウントおよび学習データの削除をリクエストすることができます。</p>
+            <p>リクエストを受けた場合、速やかにクラウド上のデータを消去いたします。</p>
+
+            <h2>9. お問い合わせ</h2>
             <p>本プライバシーポリシーに関するお問い合わせは、以下までご連絡ください。</p>
             <ul>
                 <li><strong>メール:</strong> <a href="mailto:haruyama.3710@gmail.com">haruyama.3710@gmail.com</a></li>
